package com.tjudream.designpattern.templatemethod.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-28 11:51
 *
 * @author mengxs@lenovocloud.com
 */
public class ConcreteClass2 extends AbstractClass {
    @Override
    protected void doAnything() {

    }

    @Override
    protected void doSomething() {

    }
}
